Add positions endpoint and integrate into payroll management
- Implemented a new endpoint to retrieve unique positions from active users in the payroll controller.
- Updated payroll router to include a route for fetching positions, ensuring proper role-based access control.
- Enhanced user model and service to accommodate position data, including updates to user creation and modification schemas.
- Integrated position selection in the Employee Management Page, allowing for better user data management.
- Added localization support for salary matrix management, including new terms for positions and base salary in both English and Vietnamese.
- Refactored frontend components to utilize the new positions data, improving user experience in employee management.

--- a/frontend/src/i18n/locales/en/dashboard.json
+++ b/frontend/src/i18n/locales/en/dashboard.json
@@ -1601,5 +1601,26 @@
       "created": "Event created successfully!",
       "updated": "Event updated successfully!"
     }
+  },
+  "salaryMatrix": {
+    "title": "Salary Scale Management",
+    "description": "Manage base salaries by department and position",
+    "add": "Add Salary Scale",
+    "department": "Department",
+    "position": "Position",
+    "baseSalary": "Base Salary",
+    "notes": "Notes",
+    "status": "Status",
+    "active": "Active",
+    "inactive": "Inactive",
+    "editSalary": "Edit Salary",
+    "editUserBaseSalary": "Edit Base Salary",
+    "currentSalary": "Current Salary",
+    "salarySource": "Salary Source",
+    "salaryFromMatrix": "Salary from Scale",
+    "useMatrix": "Use Salary from Scale",
+    "useCustom": "Set Custom Salary",
+    "customSalaryNote": "This salary will have highest priority, overriding scale salary",
+    "matrixSalaryNote": "Salary will be calculated from salary scale (Department + Position). If not found in scale, default salary from config will be used."
   }
 }
