--- a/frontend/src/i18n/locales/en/menu.json
+++ b/frontend/src/i18n/locales/en/menu.json
@@ -18,6 +18,7 @@
   "employee-management": "Employee Management",
   "payroll-reports": "Payroll Reports",
   "payroll": "Payroll",
+  "salary-matrix": "Salary Scale",
   "departments": "Department Management",
   "branches": "Branch Management",
   "audit-logs": "Audit Logs",
