--- a/frontend/src/i18n/locales/vi/menu.json
+++ b/frontend/src/i18n/locales/vi/menu.json
@@ -17,6 +17,7 @@
   "employee-management": "Quản lý nhân viên",
   "payroll-reports": "Báo cáo lương",
   "payroll": "Bảng lương",
+  "salary-matrix": "Thang lương",
   "departments": "Quản lý phòng ban",
   "branches": "Quản lý chi nhánh",
   "audit-logs": "Nhật ký hệ thống",
