Enhance attendance tracking with geolocation data
- Added new fields for check-in and check-out latitude and longitude in the attendance model to capture user locations during attendance.
- Updated attendance controller and service to include geolocation data in attendance history responses and processing logic.
- Modified frontend components to display check-in and check-out locations as Google Maps links, improving user experience and transparency.
- Enhanced localization files to support new terms related to geolocation in both English and Vietnamese.

--- a/frontend/src/i18n/locales/en/dashboard.json
+++ b/frontend/src/i18n/locales/en/dashboard.json
@@ -155,6 +155,8 @@
       "completed": "You have completed your check-in",
       "notCheckedOut": "Not checked out yet. Remember to check out when your shift ends.",
       "notCheckedIn": "Not checked in today",
+      "scanQR": "Scan QR code at the office to check in",
+      "scanQRButton": "Check In",
       "scanPhoto": "Scan photo at the office to check in",
       "scanPhotoButton": "Scan photo to Check In",
       "working": "Currently Working",
