--- a/frontend/src/i18n/locales/vi/dashboard.json
+++ b/frontend/src/i18n/locales/vi/dashboard.json
@@ -273,6 +273,8 @@
       "completed": "Bạn đã hoàn thành chấm công",
       "notCheckedOut": "Chưa check-out. Nhớ check-out khi kết thúc ca làm việc.",
       "notCheckedIn": "Chưa chấm công hôm nay",
+      "scanQR": "Quét mã QR tại văn phòng để chấm công",
+      "scanQRButton": "Chấm công",
       "scanPhoto": "Quét ảnh tại văn phòng để check-in",
       "scanPhotoButton": "Quét ảnh check-in",
       "working": "Đang làm việc",
